--- a/config/services_dev.yaml
+++ b/config/services_dev.yaml
@@ -1,4 +1,2 @@
 services:
-    _defaults:
-        autowire: true
-        autoconfigure: true
+    _defaults: { autowire: true, autoconfigure: true }
