get confgi from microservice without put into file

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 APP_ENV=dev
 APP_DEBUG=1
-APP_SECRET=3336101e8b74fe5fe4f38933d3fa8d84
+APP_SECRET=b5890774491a31ce7b174f442a7ef059
+PANEL_ALIAS=panel
