before db connect

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 APP_ENV=dev
 APP_DEBUG=1
-APP_SECRET=b5890774491a31ce7b174f442a7ef059
+APP_SECRET=b50a049a1da72a89a102c21ab9d0eb5c
 PANEL_ALIAS=panel
+DATABASE_URL=mysql://root:test_pass@172.17.0.1:3311/sys?serverVersion=5.7
