--- a/config/services_dev.yaml
+++ b/config/services_dev.yaml
@@ -1,3 +1,4 @@
-parameters: {  }
+parameters:
+    microservice.project_alias: panel
 services:
     _defaults: { autowire: true, autoconfigure: true }
