--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,13 @@ services:
     container_name: ijson
     ports:
       - 8001:8001
+
+  mysql:
+    image: mysql:5.7
+    container_name: symfony-base-mysql
+    ports:
+      - 3311:3306
+    volumes:
+      - ./docker/mysql/storage:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: test_pass
