--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,29 @@
 {
+    "version": "1.0.0",
+    "name": "kakadu-dev/symfony-microservice-template",
+    "description": "Kakadu symfony microservice template",
     "type": "project",
     "license": "proprietary",
     "require": {
         "php": ">=7.4.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "^1.10",
+        "doctrine/annotations": "^1.10",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "kakadu-dev/php-ijson-microservices": "^1.0.1",
+        "knplabs/knp-paginator-bundle": "^5.3",
+        "matthew-p/docker-server": "^5.0.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/property-access": "5.1.*",
+        "symfony/serializer": "5.1.*",
+        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
@@ -47,6 +56,9 @@
         "symfony/polyfill-php56": "*"
     },
     "scripts": {
+        "pre-install-cmd": [
+            "@init_env"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
@@ -56,6 +68,12 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "docs": [
+            "apidoc -i ./src -o ./apidoc-generated"
+        ],
+        "init_env": [
+            "php init_env"
         ]
     },
     "conflict": {
