--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,9 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    microservice.project_alias: 'panel'
-    microservice.service_name: 'base'
-    microservice.ijson_host: null
+    microservice.service_name: 'template'
 
 services:
     # default configuration for services in *this* file
@@ -32,3 +30,6 @@ services:
     App\Events\View:
         tags:
             - { name: kernel.event_listener, event: kernel.view}
+    App\Events\Exception:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
